Bugs on mobile version was fixed

--- a/src/style.css
+++ b/src/style.css
@@ -125,8 +125,7 @@ a:hover {
 }
 .project-section {
   text-align: center;
-  margin: 80px 0 0 60px;
-  padding: 20px;
+  margin: 80px 0 0 0;
 }
 .project-section h1 {
   font-size: 60px;
@@ -238,6 +237,7 @@ a:hover {
 }
 .work-experience {
   background-color: var(--secondary-color);
+  margin: auto;
   padding: 40px 100px;
 }
 .tech-skills-item,
@@ -252,7 +252,6 @@ a:hover {
   line-height: 24px;
 }
 
-
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
@@ -260,6 +259,9 @@ a:hover {
   }
   h2 {
     font-size: 44px;
+  }
+  .index img {
+    display: block;
   }
   .project-description {
     padding: 0;
@@ -269,24 +271,34 @@ a:hover {
     padding: 80px 20px;
   }
   .about-section {
+    display: block;
     text-align: center;
     padding: 0;
-    margin-top: 30px;
+    margin-top: 80px;
   }
-  .project-section {
+  .about-section-img {
+    display: block;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+  .about-section-name {
+    display: block;
     text-align: center;
-    padding: 0;
-    margin-top: 30px;
+    padding: 20px;
   }
   .project-section h1 {
-  font-size: 44px;
-  line-height: 1.5;
+    margin: 0 20px 0 20px;
+    padding: 0;
+    text-align: center;
+    font-size: 44px;
+    line-height: 1.5;
 }
 }
 
 @media (max-width: 576px) {
   body {
-    text-align: center !important;
     margin-top: 50px;
     margin-bottom: 50px;
   }
@@ -297,6 +309,9 @@ a:hover {
   }
   h2 {
     font-size: 34px;
+  }
+  .index img {
+    display: none;
   }
   .project-description {
     padding: 0;
@@ -311,18 +326,30 @@ a:hover {
   }
   .about-section {
     text-align: center;
-    padding: 0;
+    padding: 0 15px;
     margin-top: 30px;
+    justify-content: center;
+    align-items: center;
   }
-  .project-section {
+  .about-section-img {
+    display: block;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0;
-    margin-top: 30px;
+    width: 70%;
   }
-   .project-section h1 {
-  font-size: 44px;
-  line-height: 1.5;
-   }
-  img {
-    display: 80%;
+    .about-section-name {
+    text-align: center;
+    padding: 20px;
+  }
+  .work-experience{
+ margin: 0 auto;
+}
+  .project-section h1 {
+    display: block;
+    text-align: center;
+    font-size: 44px;
+    line-height: 1.5;
   }
 }
